Add index.html and navigation
Add home page (index.html) and navigation between the pages, edit the
text in the HTML pages to make them easier to view in the editor.

--- a/Singles.html
+++ b/Singles.html
@@ -5,14 +5,33 @@
     <title>Vinyl Junkie - Singles</title>
 </head>
 <body>
+<nav>
+    <a href="index.html">Home page</a>
+    <a href="Vinyl.html">Introduction</a>
+    <a href="Singles.html">Singles and unusual items</a>
+    <a href="Acquisitions.html">Acquisitions and history</a>
+</nav>
 <h1>Vinyl Junkie</h1>
 <h2>Singles</h2>
 <p>
-    I have a collection of 7 inch singles, some purchased because I loved the song, others because of the novelty value.  One of my favourites is Cornershop’s ‘Brimful of Asha’.  This achieved more success with the b-side remix by Norman Cook than the original version.  It was my introduction to this band and I bought the album ‘When I was born for the 7th time’ because I enjoyed it so much.  Two of my Teenage Fanclub singles are ‘What you do to me’ and ‘Radio’.  I love the sleeves on these singles.  Talking Heads ‘And she was’ I bought for the bargain price of 50p.
+    I have a collection of 7 inch singles, some purchased because I loved the song, others because of the novelty value.
+    One of my favourites is Cornershop’s ‘Brimful of Asha’.  This achieved more success with the b-side remix
+    by Norman Cook than the original version.  It was my introduction to this band and I bought the album
+    ‘When I was born for the 7th time’ because I enjoyed it so much.  Two of my Teenage Fanclub singles are ‘What you
+    do to me’ and ‘Radio’.  I love the sleeves on these singles.  Talking Heads ‘And she was’ I bought for the bargain
+    price of 50p.
 </p>
 <h2>Unusual items</h2>
 <p>
-    I am a sucker for limited editions, particularly coloured vinyl singles.  Many of those I have only listened to once, if even once.  For example, the lemon single ‘Squashy Lemon Squeezy’ by Pocket Size was bought because of the lemon yellow vinyl.  I had to check which was the band and which was the song on the back of the sleeve and I have no idea how it goes.  I bought this set of singles by the Beatles in coloured vinyl in the Virgin Megastore on Aston Quay.  They are quite expensive imports at £3.49 each.  I bought Fountains of Wayne ‘I want an alien for Christmas’ because I love Christmas songs, so I do know how this one goes.  ‘Make Me Smile (Come Up and See Me)’ by Steve Harley and Cockney Rebel is a 7 inch meant for a jukebox I think.  It has no label, the information is etched into the vinyl.  Primal Scream’s ‘Echo Dek’ is an album on five 7 inches.  I bought this because I like the band, but mainly for the novelty value.
+    I am a sucker for limited editions, particularly coloured vinyl singles.  Many of those I have only listened to once,
+    if even once.  For example, the lemon single ‘Squashy Lemon Squeezy’ by Pocket Size was bought because of the lemon
+    yellow vinyl.  I had to check which was the band and which was the song on the back of the sleeve and I have
+    no idea how it goes.  I bought this set of singles by the Beatles in coloured vinyl in the Virgin Megastore on
+    Aston Quay.  They are quite expensive imports at £3.49 each.  I bought Fountains of Wayne ‘I want an alien for
+    Christmas’ because I love Christmas songs, so I do know how this one goes.  ‘Make Me Smile (Come Up and See Me)’
+    by Steve Harley and Cockney Rebel is a 7 inch meant for a jukebox I think.  It has no label, the information
+    is etched into the vinyl.  Primal Scream’s ‘Echo Dek’ is an album on five 7 inches.  I bought this because I like
+    the band, but mainly for the novelty value.
 </p>
 </body>
 </html>
