--- a/Vinyl.html
+++ b/Vinyl.html
@@ -5,14 +5,30 @@
     <title>Vinyl Junkie - Introduction</title>
 </head>
 <body>
+<nav>
+    <a href="index.html">Home page</a>
+    <a href="Vinyl.html">Introduction</a>
+    <a href="Singles.html">Singles and unusual items</a>
+    <a href="Acquisitions.html">Acquisitions and history</a>
+</nav>
 <h1>Vinyl Junkie</h1>
 <h2>Introduction</h2>
 <p>
-    I am a bit of a record collector.  I have a small collection of LPs and a shoebox full of 7 inch singles.  Although it takes a bit of effort, I have often listened to single after single like a human jukebox.
+    I am a bit of a record collector.  I have a small collection of LPs and a shoebox full of 7 inch singles.
+    Although it takes a bit of effort, I have often listened to single after single like a human jukebox.
 </p>
 <h2>Favourites</h2>
 <p>
-    I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album ‘Bandwagonesque’ was one of the first I bought on vinyl.  The labels for the a and b side are the same on my copy, but I can tell one side from the other by the inscriptions.  On the a-side it says ‘Genius!’ and on the b-side, ‘Nothing’s final til it’s vinyl’.  ‘Blur’ by Blur is probably my favourite Blur album and is an example of an album that I have in more than one format.  I have this one on CD as well as vinyl.  The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National Concert Hall and got it signed by the man himself after his performance there in 2014.  Clint was in the band Pop Will Eat Itself, one of my favourites from my schooldays.  ‘Eat me, drink me, love me, kill me’ is one of their singles.  Another band from my schooldays is The Wonderstuff, who hail from the same part of England.  The ep ‘Welcome to the cheap seats’ was released to accompany a tour video.
+    I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album ‘Bandwagonesque’
+    was one of the first I bought on vinyl.  The labels for the a and b side are the same on my copy, but I can
+    tell one side from the other by the inscriptions.  On the a-side it says ‘Genius!’ and on the b-side,
+    ‘Nothing’s final til it’s vinyl’.  ‘Blur’ by Blur is probably my favourite Blur album and is an example
+    of an album that I have in more than one format.  I have this one on CD as well as vinyl.
+    The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
+    Concert Hall and got it signed by the man himself after his performance there in 2014.  Clint was in the band
+    Pop Will Eat Itself, one of my favourites from my schooldays.  ‘Eat me, drink me, love me, kill me’ is one
+    of their singles.  Another band from my schooldays is The Wonderstuff, who hail from the same part of England.
+    The ep ‘Welcome to the cheap seats’ was released to accompany a tour video.
 </p>
 </body>
 </html>
