--- a/Vinyl.html
+++ b/Vinyl.html
@@ -14,14 +14,16 @@
 <h1>Vinyl Junkie</h1>
 <h2>Introduction</h2>
 <p>
-    I am a bit of a record collector.  I have a small collection of LPs and a shoebox full of 7 inch singles.
-    Although it takes a bit of effort, I have often listened to single after single like a human jukebox.
+    I am a music fan and record collector, although my collection is small.  I enjoy owning and listening
+    to the physical vinyl records.  I have a collection of LPs and a shoebox full of 7 inch singles.
+    It may take more effort than CD or download to listen to, but I will happily make the time to play single after single.
 </p>
 <h2>Favourites</h2>
 <p>
-    I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album ‘Bandwagonesque’
-    was one of the first I bought on vinyl.  The labels for the a and b side are the same on my copy, but I can
-    tell one side from the other by the inscriptions.  On the a-side it says ‘Genius!’ and on the b-side,
+    Some of my favourite albums and singles I have listened to over and over, and I have a few on both vinyl and CD
+    or download.  I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album
+    ‘Bandwagonesque’ was one of the first I bought on vinyl.  The labels for the a and b side are the same on my copy,
+    but I can tell one side from the other by the inscriptions.  On the a-side it says ‘Genius!’ and on the b-side,
     ‘Nothing’s final til it’s vinyl’.  ‘Blur’ by Blur is probably my favourite Blur album and is an example
     of an album that I have in more than one format.  I have this one on CD as well as vinyl.
     The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
