--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <a href="Singles.html">Singles and unusual items</a>
     <a href="Acquisitions.html">Acquisitions and history</a>
 </nav>
-<h1>VinylStory</h1>
+<h1>Vinyl Junkie</h1>
 <p>
     A story of some of the records I own for a college assignment.
+</p>
+<p>
+    Click on the links above to read more.
 </p>
 </body>
 </html>
