--- a/Vinyl.html
+++ b/Vinyl.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Vinyl Junkie - Introduction</title>
+    <style>
+        @import "css/basicStylesheet.css";
+    </style>
 </head>
 <body>
 <nav>
@@ -23,8 +26,8 @@
     Some of my favourite albums and singles I have listened to over and over, and I have a few on both vinyl and CD
     or download.  I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album
     ‘Bandwagonesque’ was one of the first I bought on vinyl.  The labels for the a and b side are the same on my copy,
-    but I can tell one side from the other by the inscriptions.  On the a-side it says ‘Genius!’ and on the b-side,
-    ‘Nothing’s final til it’s vinyl’.  ‘Blur’ by Blur is probably my favourite Blur album and is an example
+    but I can tell one side from the other by the inscriptions.  On the a-side it says <em>‘Genius!’</em> and on the b-side,
+    <em>‘Nothing’s final til it’s vinyl’</em>.  ‘Blur’ by Blur is probably my favourite Blur album and is an example
     of an album that I have in more than one format.  I have this one on CD as well as vinyl.
     The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
     Concert Hall and got it signed by the man himself after his performance there in 2014.  Clint was in the band
