--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Vinyl Junkie - Home page</title>
+    <style>
+        @import "css/basicStylesheet.css";
+    </style>
 </head>
 <body>
 <nav>
