--- a/Vinyl.html
+++ b/Vinyl.html
@@ -25,14 +25,14 @@
 <p>
     Some of my favourite albums and singles I have listened to over and over, and I have a few on both vinyl and CD
     or download.  I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album
-    ‘Bandwagonesque’ was one of the first I bought on vinyl.  The labels for the a and b side are the same on my copy,
+    ‘Bandwagonesque’ was one of the first I bought on vinyl.<br> <img src="images/band.jpg"> <br> The labels for the a and b side are the same on my copy,
     but I can tell one side from the other by the inscriptions.  On the a-side it says <em>‘Genius!’</em> and on the b-side,
-    <em>‘Nothing’s final til it’s vinyl’</em>.  ‘Blur’ by Blur is probably my favourite Blur album and is an example
+    <em>‘Nothing’s final til it’s vinyl’</em>. <br> <img src="images/blur.jpg"> ‘Blur’ by Blur is probably my favourite Blur album and is an example
     of an album that I have in more than one format.  I have this one on CD as well as vinyl.
-    The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
+    <img src="images/moon.jpg">The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
     Concert Hall and got it signed by the man himself after his performance there in 2014.  Clint was in the band
-    Pop Will Eat Itself, one of my favourites from my schooldays.  ‘Eat me, drink me, love me, kill me’ is one
-    of their singles.  Another band from my schooldays is The Wonderstuff, who hail from the same part of England.
+    Pop Will Eat Itself, one of my favourites from my schooldays.<br> <img src="images/pwei.jpg">  ‘Eat me, drink me, love me, kill me’ is one
+    of their singles.<br> <img src="images/stuff.jpg">  Another band from my schooldays is The Wonderstuff, who hail from the same part of England.
     The ep ‘Welcome to the cheap seats’ was released to accompany a tour video.
 </p>
 </body>
