--- a/Acquisitions.html
+++ b/Acquisitions.html
@@ -23,13 +23,14 @@
     they no longer wanted when they decided to leave vinyl behind.  There are some items in my collection I would
     be embarrassed to let others see, but I still keep them even though I have never listened to them.
 </p>
+<img src="images/hits.jpg"><img src="images/jive.jpg"><img src="images/ub40.jpg"><img src="images/animals.jpg"><img src="images/mystery.jpg">
 <h2>History</h2>
 <p>
-    <img src="images/hits.jpg">Hits 5 is the first album I owned.  My parents bought it for me for Christmas one year.  It includes gems like
-    Paul Simon’s ‘You can call me Al’ and Julian Cope’s ‘World shut your mouth’.<br> <img src="images/jive.jpg">  The first single I bought was either
+    Hits 5 is the first album I owned.  My parents bought it for me for Christmas one year.  It includes gems like
+    Paul Simon’s ‘You can call me Al’ and Julian Cope’s ‘World shut your mouth’.   The first single I bought was either
     Jive Bunny and the Mastermixers’ ‘Swing the mood’ or Robert Palmer and UB40’s ‘I’ll be your baby tonight’, I can’t
-    remember which one I bought first.<br> <img src="images/ub40.jpg">  <br> <img src="images/animals.jpg">The album ‘Animals’ by Pink Floyd was one that my dad owned.  I love the cover
-    image of the inflatable pig floating over Battersea Power Station.<br> <img src="images/mystery.jpg">  The Beatles were a favourite band of both my
+    remember which one I bought first.  The album ‘Animals’ by Pink Floyd was one that my dad owned.  I love the cover
+    image of the inflatable pig floating over Battersea Power Station.   The Beatles were a favourite band of both my
     parents.  As I child I enjoyed ‘Magical Mystery Tour’ for the songs and the book that goes with it.
 </p>
 </body>
