--- a/Vinyl.html
+++ b/Vinyl.html
@@ -14,63 +14,37 @@
     <a href="Singles.html">Singles and unusual items</a>
     <a href="Acquisitions.html">Acquisitions and history</a>
 </nav>
-<h1>Vinyl Junkie</h1>
-<h2>Introduction</h2>
-<p>
+<main>
+  <section class="images">
+      <img src="images/band.jpg">
+      <img src="images/blur.jpg">
+      <img src="images/moon.jpg">
+      <img src="images/pwei.jpg">
+      <img src="images/stuff.jpg">
+  </section>
+  <section class="text">
+  <h1>Vinyl Junkie</h1>
+    <h2>Introduction</h2>
+    <p>
     I am a music fan and record collector, although my collection is small.  I enjoy owning and listening
     to the physical vinyl records.  I have a collection of LPs and a shoebox full of 7 inch singles.
     It may take more effort than CD or download to listen to, but I will happily make the time to play single after single.
-</p>
-<h2>Favourites</h2>
-<table>
-    <tr>
-        <td>
-            <img src="images/band.jpg">
-        </td>
-        <td>
-            Some of my favourite albums and singles I have listened to over and over, and I have a few on both vinyl and CD
-            or download.  I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album
-            ‘Bandwagonesque’ was one of the first I bought on vinyl. The labels for the a and b side are the same on my copy,
-            but I can tell one side from the other by the inscriptions.  On the a-side it says <em>‘Genius!’</em> and on the b-side,
-            <em>‘Nothing’s final til it’s vinyl’</em>.
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <img src="images/blur.jpg">
-        </td>
-        <td>
-            ‘Blur’ by Blur is probably my favourite Blur album and is an example of an album that I have in more than
-            one format.  I have this one on CD as well as vinyl.
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <img src="images/moon.jpg">
-        </td>
-        <td>
-            The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
-            Concert Hall and got it signed by the man himself after his performance there in 2014.
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <img src="images/pwei.jpg">
-        </td>
-        <td>
-            Clint was in the band Pop Will Eat Itself, one of my favourites from my schooldays.
-            ‘Eat me, drink me, love me, kill me’ is one of their singles.
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <img src="images/stuff.jpg">
-        </td>
-        <td>
-            Another band from my schooldays is The Wonderstuff, who hail from the same part of England.
-            The ep ‘Welcome to the cheap seats’ was released to accompany a tour video.
-        </td>
-    </tr>
-</table>
+    </p>
+    <h2>Favourites</h2>
+    Some of my favourite albums and singles I have listened to over and over, and I have a few on both vinyl and CD
+    or download.  I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album
+    ‘Bandwagonesque’ was one of the first I bought on vinyl. The labels for the a and b side are the same on my copy,
+    but I can tell one side from the other by the inscriptions.  On the a-side it says <em>‘Genius!’</em> and on the b-side,
+    <em>‘Nothing’s final til it’s vinyl’</em>.
+    ‘Blur’ by Blur is probably my favourite Blur album and is an example of an album that I have in more than
+    one format.  I have this one on CD as well as vinyl.
+    The ‘Moon’ soundtrack by Clint Mansell is one of my favourite soundtracks.  I bought this at the National
+    Concert Hall and got it signed by the man himself after his performance there in 2014.
+    Clint was in the band Pop Will Eat Itself, one of my favourites from my schooldays.
+    ‘Eat me, drink me, love me, kill me’ is one of their singles.
+    Another band from my schooldays is The Wonderstuff, who hail from the same part of England.
+    The ep ‘Welcome to the cheap seats’ was released to accompany a tour video.
+</section>
+</main>
 </body>
 </html>
