--- a/Singles.html
+++ b/Singles.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Vinyl Junkie - Singles</title>
+    <link href='//fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
     <style>
         @import "css/basicStylesheet.css";
     </style>
@@ -11,7 +13,7 @@
 <nav>
     <a href="index.html">Home page</a>
     <a href="Vinyl.html">Introduction</a>
-    <a href="Singles.html">Singles and unusual items</a>
+    <a href="Singles.html" class="current_page">Singles and unusual items</a>
     <a href="Acquisitions.html">Acquisitions and history</a>
 </nav>
 <main>
