--- a/Vinyl.html
+++ b/Vinyl.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Vinyl Junkie - Introduction</title>
+    <link href='//fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
     <style>
         @import "css/basicStylesheet.css";
     </style>
@@ -10,7 +12,7 @@
 <body>
 <nav>
     <a href="index.html">Home page</a>
-    <a href="Vinyl.html">Introduction</a>
+    <a href="Vinyl.html" class="current_page">Introduction</a>
     <a href="Singles.html">Singles and unusual items</a>
     <a href="Acquisitions.html">Acquisitions and history</a>
 </nav>
