--- a/Acquisitions.html
+++ b/Acquisitions.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Vinyl Junkie - Acquisitions</title>
+    <link href='//fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
     <style>
         @import "css/basicStylesheet.css";
     </style>
@@ -12,7 +14,7 @@
     <a href="index.html">Home page</a>
     <a href="Vinyl.html">Introduction</a>
     <a href="Singles.html">Singles and unusual items</a>
-    <a href="Acquisitions.html">Acquisitions and history</a>
+    <a href="Acquisitions.html" class="current_page">Acquisitions and history</a>
 </nav>
 <main>
   <section class="images">
