--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Vinyl Junkie - Home page</title>
+    <link href='//fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>
     <style>
         @import "css/basicStylesheet.css";
     </style>
 </head>
 <body>
 <nav>
-    <a href="index.html">Home page</a>
+    <a href="index.html" class="current_page">Home page</a>
     <a href="Vinyl.html">Introduction</a>
     <a href="Singles.html">Singles and unusual items</a>
     <a href="Acquisitions.html">Acquisitions and history</a>
