V6: Alternate ending version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="index.html" class="current_page">Home page</a>
     <a href="Vinyl.html">Introduction</a>
     <a href="Singles.html">Singles and unusual items</a>
-    <a href="Acquisitions.html">Acquisitions and history</a>
+    <a href="AlternateEnding.html">Artwork and storage</a>
 </nav>
 <h1>Vinyl Junkie</h1>
 <p>
