--- a/Vinyl.html
+++ b/Vinyl.html
@@ -14,7 +14,7 @@
     <a href="index.html">Home page</a>
     <a href="Vinyl.html" class="current_page">Introduction</a>
     <a href="Singles.html">Singles and unusual items</a>
-    <a href="Acquisitions.html">Acquisitions and history</a>
+    <a href="AlternateEnding.html">Artwork and storage</a>
 </nav>
 <main>
   <section class="images">
@@ -33,6 +33,7 @@
     It may take more effort than CD or download to listen to, but I will happily make the time to play single after single.
     </p>
     <h2>Favourites</h2>
+    <p>
     Some of my favourite albums and singles I have listened to over and over, and I have a few on both vinyl and CD
     or download.  I first heard Teenage Fanclub when they supported Nirvana at the Point in 1992.  Their album
     ‘Bandwagonesque’ was one of the first I bought on vinyl. The labels for the a and b side are the same on my copy,
@@ -46,6 +47,7 @@
     ‘Eat me, drink me, love me, kill me’ is one of their singles.
     Another band from my schooldays is The Wonderstuff, who hail from the same part of England.
     The ep ‘Welcome to the cheap seats’ was released to accompany a tour video.
+    </p>
 </section>
 </main>
 </body>
