--- a/Vinyl.html
+++ b/Vinyl.html
@@ -14,7 +14,7 @@
     <a href="index.html">Home page</a>
     <a href="Vinyl.html" class="current_page">Introduction</a>
     <a href="Singles.html">Singles and unusual items</a>
-    <a href="AlternateEnding.html">Artwork and storage</a>
+    <a href="Acquisitions.html">Acquisitions and history</a>
 </nav>
 <main>
   <section class="images">
